--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.1.3"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
